kubernetes_batch2/Project/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: product-api
  namespace: ecommerce

spec:

  selector:
    app: product-api

  ports:

  - port: 80
    targetPort: 5678

  type: ClusterIP
