kubernetes_batch2/Project/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

spec:

  ingressClassName: nginx

  rules:

  - host: shop.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: frontend

            port:
              number: 80

      - path: /products

        pathType: Prefix

        backend:

          service:
            name: product-api

            port:
              number: 80
