kubernetes_batch2/Project/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: mysql-policy
  namespace: ecommerce

spec:

  podSelector:

    matchLabels:
      app: mysql

  policyTypes:
  - Ingress

  ingress:

  - from:

    - podSelector:

        matchLabels:
          app: product-api
